[project]
name = "uthere"
version = "0.1.0"
description = "Camera-based user presence detection for Claude Code"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.8",
    "mcp[cli]>=1.0",
    "mediapipe>=0.10.33",
]

[project.urls]
Homepage = "https://github.com/odfalik/uthere"

[project.scripts]
uthere-server = "uthere.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
